# emr_test

./: README.md  plugin_info.json  pyproject.toml
src/emr_test/: mod.py
src/emr_test/templates/: index.html
