[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emr_test"
version = "0.1.0"
authors = [
    { name="Assistant", email="assistant@example.com" },
]
description = "EMR demo plugin for testing and demonstration purposes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.0.0"
]

[project.urls]
"Homepage" = "https://github.com/username/emr_test"
"Bug Tracker" = "https://github.com/username/emr_test/issues"
